@@ -416,8 +416,7 @@ function recipe_menu() {
   if (variable_get('recipe_index_enable', 1)) {
     $items['recipe'] = array(
       'title' => 'Recipes',
-      'page callback' => 'drupal_get_form',
-      'page arguments' => array('recipe_index_page_form'),
+      'page callback' => 'recipe_index_page',
       'access arguments' => array('access content'),
       'file' => 'recipe_index.inc',
     );
@@ -1146,40 +1145,10 @@ function recipe_theme() {
       'function' => 'theme_recipe_ingredients',
       'arguments' => array('ingredients' => NULL, 'factor' => 1),
     ),
-    'recipe_index' => array(
-      'function' => 'theme_recipe_index',
-      'arguments' => array('name' => NULL, 'index_list' => NULL),
-    ),
-    'recipe_index_item' => array(
-      'arguments' => array('term' => NULL),
-    ),
-    'recipe_list' => array(
-      'arguments' => array('output' => NULL),
-    ),
-
-
-    'recipe_more_info' => array(
-      'arguments' => array('content' => NULL),
+    'recipe_index_page' => array(
+      'arguments' => array('tree' => NULL),
       'file' => 'recipe_index.inc',
     ),
-    'recipe_index_page_form' => array(
-      'arguments' => array('element' => NULL),
-      'file' => 'recipe_index.inc',
-    ),
-    'recipe_index_category' => array(
-      'arguments' => array('element' => NULL),
-      'file' => 'recipe_index.inc',
-    ),
-    'recipe_index_category_children' => array(
-      'arguments' => array('element' => NULL),
-      'file' => 'recipe_index.inc',
-    ),
-    'recipe_index_append' => array(
-      'arguments' => array('link' => NULL),
-      'file' => 'recipe_index.inc',
-    ),
-
-
   );
 }
 
