@@ -3,15 +3,28 @@
  */
 
 /* Headers for "Categories" and "Recipes..." sections */
-.recipe_index_section {
-  margin-top: 1.0em;
-  margin-bottom: 0.5em;
+.recipe_index_category_list {
   font-weight: bold;
-  font-size: 160%;
+  float: left;
+  width: 40%;
 }
 
-/* Parent category only, excluding children (if any) */
-.recipe_index_category_parent {
+.recipe_index_category_parents {
+  wrap:vert;
   font-weight: bold;
-  font-size: 130%;
+  font-size: 100%;
+  margin:0;padding:0;
+  margin-bottom: 20px;
+}
+.recipe_index_category_children {
+  font-weight: bold;
+  font-size: 90%;
+  margin:0;padding:0;
+}
+
+
+.recipe_index_node_lists {
+  font-weight: bold;
+  float: left;
+  width: 58%;
 }
