@@ -1,3 +1,7 @@
+2010-02-23 jvandervort
+  * reworked recipe index page.
+  * removed unused themes in the registry.
+
 2010-02-22 jvandervort
   * changed recipe index page callback to drupal_get_form.
   * changed recipe index page permission to "access content".
